--- a/debian/control
+++ b/debian/control
@@ -1,8 +1,9 @@
 Source: rabbitmq-server
 Section: net
 Priority: extra
-Maintainer: RabbitMQ Team <packaging@rabbitmq.com>
-Uploaders: Emile Joubert <emile@rabbitmq.com>
+Maintainer: Pexip AS <packaging@pexip.com>
+XBCS-Original-Maintainer: RabbitMQ Team <packaging@rabbitmq.com>
+XBCS-Original-Uploaders: Emile Joubert <emile@rabbitmq.com>
 DM-Upload-Allowed: yes
 Build-Depends: cdbs, debhelper (>= 5), erlang-dev, python-simplejson, xmlto, xsltproc, erlang-nox (>= 1:13.b.3), erlang-src (>= 1:13.b.3), unzip, zip
 Standards-Version: 3.9.2
