--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,7 @@ XBCS-Original-Uploaders: Emile Joubert <emile@rabbitmq.com>
 DM-Upload-Allowed: yes
 Build-Depends: cdbs, debhelper (>= 5), erlang-dev, python-simplejson, xmlto, xsltproc, erlang-nox (>= 1:13.b.3), erlang-src (>= 1:13.b.3), unzip, zip
 Standards-Version: 3.9.2
+XS-Pexip-Upstream: http://ftp.debian.org/debian/ jessie
 
 Package: rabbitmq-server
 Architecture: all
