--- a/debian/control
+++ b/debian/control
@@ -4,13 +4,13 @@ Priority: extra
 Maintainer: Pexip AS <packaging@pexip.com>
 XSBC-Pexip-Original-Maintainer: RabbitMQ Team <packaging@rabbitmq.com>
 XSBC-Pexip-Original-Uploaders: Blair Hester <bhester@gopivotal.com>
-Build-Depends: cdbs, debhelper (>= 5), erlang-dev, python-simplejson, xmlto, xsltproc, erlang-nox (>= 1:13.b.3), erlang-src (>= 1:13.b.3), unzip, zip
+Build-Depends: cdbs, debhelper (>= 5), erlang-dev, python-simplejson, xmlto, xsltproc, erlang-nox (>= 1:17.3), erlang-src (>= 1:17.3), unzip, zip
 Standards-Version: 3.9.2
 XS-Pexip-Upstream: http://ftp.debian.org/debian/ jessie
 
 Package: rabbitmq-server
 Architecture: all
-Depends: erlang-nox (>= 1:13.b.3) | esl-erlang, adduser, logrotate, ${misc:Depends}
+Depends: erlang-nox (>= 1:17.3) | esl-erlang, adduser, logrotate, ${misc:Depends}
 Description: AMQP server written in Erlang
  RabbitMQ is an implementation of AMQP, the emerging standard for high
  performance enterprise messaging. The RabbitMQ server is a robust and
