--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ XS-Pexip-Upstream: http://ftp.debian.org/debian/ jessie
 
 Package: rabbitmq-server
 Architecture: all
-Depends: erlang-nox (>= 1:17.3-dfsg-4pexip4) | esl-erlang, adduser, logrotate, rabbitmq-upgrade-helper, ${misc:Depends}
+Depends: erlang-nox (>= 1:17.3-dfsg-4pexip1+v13u1) | esl-erlang, adduser, logrotate, rabbitmq-upgrade-helper, ${misc:Depends}
 Description: AMQP server written in Erlang
  RabbitMQ is an implementation of AMQP, the emerging standard for high
  performance enterprise messaging. The RabbitMQ server is a robust and
