--- a/debian/control
+++ b/debian/control
@@ -40,7 +40,7 @@ Standards-Version: 4.2.1
 Vcs-Browser: https://salsa.debian.org/openstack-team/third-party/rabbitmq-server
 Vcs-Git: https://salsa.debian.org/openstack-team/third-party/rabbitmq-server.git
 Homepage: http://www.rabbitmq.com/
-XS-Pexip-Upstream: http://ftp.debian.org/debian/ buster
+XS-Pexip-Upstream: http://deb.debian.org/debian/ bullseye
 
 Package: rabbitmq-server
 Architecture: all
