--- a/debian/control
+++ b/debian/control
@@ -41,7 +41,7 @@ Standards-Version: 4.2.1
 Vcs-Browser: https://salsa.debian.org/openstack-team/third-party/rabbitmq-server
 Vcs-Git: https://salsa.debian.org/openstack-team/third-party/rabbitmq-server.git
 Homepage: https://www.rabbitmq.com/
-XS-Pexip-Upstream: http://deb.debian.org/debian/ bullseye
+XS-Pexip-Upstream: http://deb.debian.org/debian/ bookworm
 
 Package: rabbitmq-server
 Architecture: all
